syntax ="proto3";  
package user; 

option go_package="/proto";

service UserService {
    rpc RegisterUser(UserRequest)returns (UserResponse);
    rpc LoginUser(LoginRequest) returns (TokenResponse);
    }



message UserRequest{
    string name=1; 
    string username=2; 
    
    string password=3; 
}

message UserResponse {
    uint32 id=1; 
    string name=2; 
    string username=3; 
}

message LoginRequest{
    string username=1; 
    string password=2; 
}


message TokenResponse{
    string token=1; 
}

